--- a/style.css
+++ b/style.css
@@ -10,16 +10,23 @@ body,
     font-size: 30px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 .child {
     width: 28%;
+    border: 1px solid red
 }
 .child-1{
     border:3px solid green;
+    height:300px;
 }
 .child-2{
     border:3px solid blue;
+    height:500px;
+    flex-grow: 2;
 }
 .child-3{
     border:3px solid red;
+    height:600px;
+    flex-grow: 2;
 }
