--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,3 +1,10 @@
-body{
-    background-color: red;
+@import "_variables";
+@import "_header";
+html, 
+body,
+*{
+    margin: 0; 
+    padding: 0;
+    box-sizing: border-box;
+    font-size: 62.5%;
 }
