--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,5 +1,6 @@
-@import "_variables";
+/*@import "_variables";
 @import "_header";
+@import "_about";
 html, 
 body,
 *{
@@ -7,4 +8,4 @@ body,
     padding: 0;
     box-sizing: border-box;
     font-size: 62.5%;
-}
+}/*
