--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,14 +1,14 @@
 @import "_variables";
 @import "_mixins";
-img {
-    height: 3rem;
-}
+
 .about {
     height: 3rem;
     background-color: royalblue;
+    @include flex-row-center;
 }
 .about-row{
     @include flex-row-center;
+    background-color: red;
     justify-content: space-between;
     height: 100%;
     width: 80vw;
@@ -18,4 +18,9 @@ img {
     background-color: indigo;
     height: 90%;
     width: 25%;
+    @include flex-col-center;
+    justify-content: space-evenly;
+}
+.about-img{
+    height: 25%;
 }
