--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,4 @@
-$primary-color-dark: #22058b;
+/*$primary-color-dark: #22058b;
 $primary-color: #3d44f8;
 $primary-color-light: #c4e0ff;
 $primary-color-text: #ffffff;
