--- a/scss/style.css
+++ b/scss/style.css
@@ -25,7 +25,7 @@ body,
     font-size: 3rem;
 }
 .box p {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
 }
 .header {
     background-color: rgb(4, 4, 90);
@@ -37,7 +37,7 @@ body,
     font-family: 'Passion One', cursive;
 }
 .header-title {
-    font-size: 16rem;
+    font-size: 25vh;
     text-align: center;
 }
 img{
@@ -65,4 +65,8 @@ img{
     height: 100%;
     width: 80vw;
     margin:0 auto;
+}
+.form:before {
+    content:"/26C4";
+    font-size: 1rem
 }
