--- a/scss/style.css
+++ b/scss/style.css
@@ -67,6 +67,21 @@ img{
     margin:0 auto;
 }
 .form:before {
-    content:"/26C4";
-    font-size: 1rem
+    content:"\265A";
+    font-size: 5rem;
+}
+.button {
+    transition: all 0.3s;
+    font-size: 5rem;
+    color:orangered;
+}
+.button:hover{
+    transform: scale(1.25);
+}
+.butt{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+    background-color: rgb(220, 215, 215);
 }
