--- a/scss/style.css
+++ b/scss/style.css
@@ -27,7 +27,14 @@ body,
 .box p {
     font-size: 1.5rem;
 }
+
+  .header:hover {
+    color: rgb(4, 4, 90);
+    box-shadow: inset 300rem 0 0 0 rgb(255, 208, 0);;
+  }
+  
 .header {
+    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
     background-color: rgb(4, 4, 90);
     color:rgb(255, 208, 0);
     height: 30vh;
@@ -46,7 +53,6 @@ img{
 }
 .parent{
     height: 220vh;
-    background-color:rgb(220, 215, 215);
 }
 .col{
     display: flex;
@@ -147,4 +153,179 @@ img{
     80% { transform: translate(-1px, -1px) rotate(1deg); }
     90% { transform: translate(1px, 2px) rotate(0deg); }
     100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
+  .basketballa {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height:100vh;
+  }
+  
+  .basketball {
+    position: relative;
+    top: 200rem;
+    left:4rem;
+  }
+  .ball {
+    position: absolute;
+    background-color: #e76f51;
+    border-radius:50%;
+    width:10rem;
+    height:10rem;
+    overflow: hidden;
+    border: 3px solid #333;
+    animation: bounce 1.5s ease-in infinite;
+  }
+  .ball:before, .ball:after {
+    content:"";
+    position: absolute;
+    background-color: #333;
+    width:110px;
+    height:3px;
+    top:50px;
+    left:-5px;
+  }
+  
+  .ball:before {
+    transform: rotate(45deg);
+  }
+  
+  .ball:after {
+    transform: rotate(-45deg);
+  }
+  
+  .lines {
+    position: absolute;
+    border-radius:50%;
+    border: 3px solid #333;
+    width:70px;
+    height:70px;
+    left:-20px;
+    top:-20px;
+  }
+  
+  .lines:before {
+    content:"";
+    position: absolute; 
+    border-radius:50%;
+    border: 3px solid #333;
+    width:70px;
+    height:70px;
+    top:65px;
+    left:60px;
+  }
+  .shadow {
+    position: absolute;
+    width:100px;
+    height:15px;
+    background-color: rgba(0, 0, 0, 0.992);
+    border-radius:50%;
+    top:95px;
+    z-index:-1;
+    left:3px;
+    animation: scale 1.5s ease-in infinite;
+  }
+  @keyframes bounce {
+    0% {transform: translate3d(0, 0, 0) rotate(0deg);}
+   25% {transform: translate3d(0, -185px, 0) rotate(90deg);}
+   50% {transform: translate3d(0, 0, 0) rotate(180deg);}
+   75% {transform: translate3d(0, -185px, 0) rotate(270deg);}
+   100% {transform: translate3d(0, 0, 0) rotate(360deg);}
+ }
+ @keyframes scale {
+    0% {transform: scaleX(1);}
+    25% {transform: scaleX(0.7);}
+    50% {transform: scaleX(1);}
+    75% {transform: scaleX(0.7);}
+    100% {transform: scaleX(1);}
+  }
+
+
+
+
+
+  .basketballz {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height:100vh;
+  }
+  
+  .basketballzz {
+    position: relative;
+    top: 200rem;
+    left:176rem;
+  }
+  .ballz {
+    position: absolute;
+    background-color: #e76f51;
+    border-radius:50%;
+    width:10rem;
+    height:10rem;
+    overflow: hidden;
+    border: 3px solid #333;
+    animation: bounce 1.5s ease-in infinite;
+  }
+  .ballz:before, .ballz:after {
+    content:"";
+    position: absolute;
+    background-color: #333;
+    width:110px;
+    height:3px;
+    top:50px;
+    left:-5px;
+  }
+  
+  .ballz:before {
+    transform: rotate(45deg);
+  }
+  
+  .ballz:after {
+    transform: rotate(-45deg);
+  }
+  
+  .linesz {
+    position: absolute;
+    border-radius:50%;
+    border: 3px solid #333;
+    width:70px;
+    height:70px;
+    left:-20px;
+    top:-20px;
+  }
+  
+  .linesz:before {
+    content:"";
+    position: absolute; 
+    border-radius:50%;
+    border: 3px solid #333;
+    width:70px;
+    height:70px;
+    top:65px;
+    left:60px;
+  }
+  .shadowz {
+    position: absolute;
+    width:100px;
+    height:15px;
+    background-color: rgba(0, 0, 0, 0.992);
+    border-radius:50%;
+    top:95px;
+    z-index:-1;
+    left:3px;
+    animation: scale 1.5s ease-in infinite;
+  }
+  @keyframes bounce {
+    0% {transform: translate3d(0, 0, 0) rotate(0deg);}
+   25% {transform: translate3d(0, -185px, 0) rotate(90deg);}
+   50% {transform: translate3d(0, 0, 0) rotate(180deg);}
+   75% {transform: translate3d(0, -185px, 0) rotate(270deg);}
+   100% {transform: translate3d(0, 0, 0) rotate(360deg);}
+ }
+ @keyframes scale {
+    0% {transform: scaleX(1);}
+    25% {transform: scaleX(0.7);}
+    50% {transform: scaleX(1);}
+    75% {transform: scaleX(0.7);}
+    100% {transform: scaleX(1);}
   }
