--- a/scss/style.css
+++ b/scss/style.css
@@ -7,6 +7,9 @@ body,
     font-family: 'Antonio', sans-serif;
     font-size: 62.5%; /* Normally 100% is 16 pixels. We want the size to be 10px so we do 62.5& */
 }
+body {
+  @media(min-width: none;)
+}
 .box {
     display: flex;
     align-items: center;
