--- a/scss/style.css
+++ b/scss/style.css
@@ -10,17 +10,17 @@ body,
 
 .box {
   display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    background-color: lightgray;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    margin-top: 3rem;
-    border-radius: 8px;
-    box-shadow: 1rem 1rem 0.5rem grey;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: lightgray;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  margin-top: 3rem;
+  border-radius: 8px;
+  box-shadow: 1rem 1rem 0.5rem grey;
 }
 .box h3{
     font-size: 2.8vw;
@@ -155,92 +155,6 @@ img{
     90% { transform: translate(1px, 2px) rotate(0deg); }
     100% { transform: translate(1px, -2px) rotate(-1deg); }
   }
-  .basketballa {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height:100vh;
-  }
-  
-  .basketball {
-    position: relative;
-    top: 200rem;
-    left:4rem;
-  }
-  .ball {
-    position: absolute;
-    background-color: #e76f51;
-    border-radius:50%;
-    width:10rem;
-    height:10rem;
-    overflow: hidden;
-    border: 3px solid #333;
-    animation: bounce 1.5s ease-in infinite;
-  }
-  .ball:before, .ball:after {
-    content:"";
-    position: absolute;
-    background-color: #333;
-    width:110px;
-    height:3px;
-    top:50px;
-    left:-5px;
-  }
-  
-  .ball:before {
-    transform: rotate(45deg);
-  }
-  
-  .ball:after {
-    transform: rotate(-45deg);
-  }
-  
-  .lines {
-    position: absolute;
-    border-radius:50%;
-    border: 3px solid #333;
-    width:70px;
-    height:70px;
-    left:-20px;
-    top:-20px;
-  }
-  
-  .lines:before {
-    content:"";
-    position: absolute; 
-    border-radius:50%;
-    border: 3px solid #333;
-    width:70px;
-    height:70px;
-    top:65px;
-    left:60px;
-  }
-  .shadow {
-    position: absolute;
-    width:100px;
-    height:15px;
-    background-color: rgba(0, 0, 0, 0.992);
-    border-radius:50%;
-    top:95px;
-    z-index:-1;
-    left:3px;
-    animation: scale 1.5s ease-in infinite;
-  }
-  @keyframes bounce {
-    0% {transform: translate3d(0, 0, 0) rotate(0deg);}
-   25% {transform: translate3d(0, -185px, 0) rotate(90deg);}
-   50% {transform: translate3d(0, 0, 0) rotate(180deg);}
-   75% {transform: translate3d(0, -185px, 0) rotate(270deg);}
-   100% {transform: translate3d(0, 0, 0) rotate(360deg);}
- }
- @keyframes scale {
-    0% {transform: scaleX(1);}
-    25% {transform: scaleX(0.7);}
-    50% {transform: scaleX(1);}
-    75% {transform: scaleX(0.7);}
-    100% {transform: scaleX(1);}
-  }
-  
   /* iphone12 */
   @media only screen and (max-width:390px) { 
    #id {
@@ -259,18 +173,29 @@ img{
     flex-wrap: wrap;
     margin-left: 4.5rem;
    }
+   .col{
+    display: flex;
+    flex-direction: column;
+   }
+   .row{
+    display: flex;
+    flex-direction: column;
+   }
    .box{
-    height: 250px;
-    width: 250px;
+    height: 220px;
+    width: 220px;
    }
    .img{
-    height: 200px;
-    width: 200px;
+    height: 180px;
+    width: 180px;
    }
    .box h3,
    .box p{
-    font-size: 20px;
+    font-size: 15px;
    }
+   .parent{
+    height: 390vh;
+}
   }
   /*ipad*/
   @media screen and (max-width:820px){
