--- a/scss/style.css
+++ b/scss/style.css
@@ -199,5 +199,43 @@ img{
   }
   /*ipad*/
   @media screen and (max-width:820px){
-    
+    #id {
+      width: 400px;
+      margin: 0 auto;
+      font-size: 60px;
+     }
+     .header {
+      height: 15vh;
+      width: 100vw;
+     }
+     .parent {
+      width: 5rem;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      margin-left: 4.5rem;
+     }
+     .col{
+      display: flex;
+      flex-direction: column;
+     }
+     .row{
+      display: flex;
+      flex-direction: column;
+     }
+     .box{
+      height: 220px;
+      width: 220px;
+     }
+     .img{
+      height: 180px;
+      width: 180px;
+     }
+     .box h3,
+     .box p{
+      font-size: 15px;
+     }
+     .parent{
+      height: 390vh;
+  }
   }
