--- a/scss/style.css
+++ b/scss/style.css
@@ -199,7 +199,7 @@ img{
   }
 }
 
-/*ipad */
+/*ipad air*/
 @media screen and (max-width:820px) and (min-width:820px){
   .header-title {
     margin: 0 auto;
